--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "fastify": "^5.2.1",
     "kysely": "^0.27.5",
     "pg": "^8.13.1",
-    "pino": "^9.6.0"
+    "pino": "^9.6.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^22.12.0",
