Dockerize app with multi-stage build and dedicated migrate service
- Add Dockerfile (build stage compiles TS, prod stage has deps only)
- Add app and migrate services to docker-compose, postgres healthcheck
- Parameterize compose with env vars, update .env.example
- Refactor migrate.ts to explicit migration registry (no FileMigrationProvider)
- Add /healthz endpoint with DB connectivity check
- Bump TypeScript to 5.9.3, switch module resolution to NodeNext

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # Postgres (with pgvector extension)
-DATABASE_URL=postgresql://user:password@localhost:5432/agent
+POSTGRES_USER=vigil
+POSTGRES_PASSWORD=vigil
+POSTGRES_DB=vigil
+DATABASE_URL=postgresql://vigil:vigil@localhost:5433/vigil
 
 # OpenRouter
 OPENROUTER_API_KEY=sk-or-...
