--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "migrate": "tsx src/db/migrate.ts",
+    "migrate:prod": "node dist/db/migrate.js",
     "test": "vitest run",
     "test:watch": "vitest"
   },
@@ -24,7 +25,7 @@
     "@types/pg": "^8.11.11",
     "pino-pretty": "^13.1.3",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.3",
+    "typescript": "^5.9.3",
     "vitest": "^3.0.5"
   }
 }
