Add agent loop: streaming chat completions via OpenRouter
Agents SDK + OpenAIChatCompletionsModel pointed at OpenRouter,
ThreadService/AgentService layer, SSE streaming endpoint at
POST /v1/chat/completions. Dockerfile bumped to node:24-alpine
to match host npm version.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,8 @@ services:
     environment:
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
       NODE_ENV: production
+      OPENROUTER_API_KEY: ${OPENROUTER_API_KEY}
+      OPENROUTER_CHAT_MODEL: ${OPENROUTER_CHAT_MODEL:-anthropic/claude-sonnet-4}
 
 volumes:
   vigil-pgdata:
