--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@openai/agents": "^0.5.2",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "kysely": "^0.27.5",
