--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "start": "node dist/index.js",
     "migrate": "tsx src/db/migrate.ts",
     "migrate:prod": "node dist/db/migrate.js",
+    "build:web": "cd web && npm run build",
     "test": "vitest run",
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@fastify/static": "^9.0.0",
     "@openai/agents": "^0.5.2",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
