Add smooth sidebar transitions, fix root vitest excluding web tests
TransitionGroup on thread list for fade-in on new threads, keyed
Transition for title crossfade on SSE updates. Exclude web/** from
root vitest config and chain frontend tests in npm test script.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "migrate": "tsx src/db/migrate.ts",
     "migrate:prod": "node dist/db/migrate.js",
     "build:web": "cd web && npm run build",
-    "test": "vitest run",
+    "test": "vitest run && cd web && npx vitest run",
     "test:watch": "vitest"
   },
   "dependencies": {
