--- a/web/package.json
+++ b/web/package.json
@@ -10,8 +10,14 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@vueuse/core": "^14.2.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.575.0",
     "markdown-it": "^14.1.0",
+    "reka-ui": "^2.8.2",
     "shiki": "^3.2.1",
+    "tailwind-merge": "^3.5.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -22,6 +28,7 @@
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^20.7.0",
     "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.3",
     "vite": "^6.3.5",
     "vitest": "^4.0.18",
