--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
   },
   "dependencies": {
     "@fastify/static": "^9.0.0",
+    "@mozilla/readability": "^0.6.0",
     "@openai/agents": "^0.5.2",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "kysely": "^0.27.5",
+    "linkedom": "^0.18.12",
     "pg": "^8.13.1",
     "pino": "^9.6.0",
+    "turndown": "^7.2.2",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^22.12.0",
     "@types/pg": "^8.11.11",
+    "@types/turndown": "^5.0.6",
     "pino-pretty": "^13.1.3",
     "tsx": "^4.19.2",
     "typescript": "^5.9.3",
