Add directions tool and log registered tools on boot
Google Maps Directions API integration with departure/arrival time
support. Conditionally registered when GOOGLE_MAPS_API_KEY is set.

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ OPENROUTER_EMBEDDING_MODEL=openai/text-embedding-3-small
 NTFY_URL=https://ntfy.yourdomain.com
 NTFY_TOPIC=agent
 
+# API_KEYS
+GOOGLE_MAPS_API_KEY=AI....
+
 # Server
 PORT=3000
 
