Add scheduler, job queue, and ntfy push notifications
Implements build step 7: scheduled wake behavior with cron-based job
execution, idempotent run creation, lock-based claim/refresh, and
fire-and-forget ntfy notifications on completion or failure.

--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,12 @@ OPENROUTER_API_KEY=sk-or-...
 OPENROUTER_CHAT_MODEL=anthropic/claude-sonnet-4
 OPENROUTER_EMBEDDING_MODEL=openai/text-embedding-3-small
 
-# ntfy push notifications
+# ntfy push notifications (optional)
 NTFY_URL=https://ntfy.yourdomain.com
 NTFY_TOPIC=agent
+
+# App URL for notification deep links (optional)
+APP_URL=http://localhost:3000
 
 # API_KEYS
 GOOGLE_MAPS_API_KEY=AI....
