--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fastify/static": "^9.0.0",
     "@mozilla/readability": "^0.6.0",
     "@openai/agents": "^0.5.2",
+    "croner": "^10.0.1",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "kysely": "^0.27.5",
