--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vigil",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "dev": "node --import tsx/esm --watch src/index.ts",
