--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "migrate:prod": "node dist/db/migrate.js",
     "build:web": "cd web && npm run build",
     "test": "vitest run && cd web && npx vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "lint": "eslint src/"
   },
   "dependencies": {
     "@fastify/static": "^9.0.0",
@@ -29,12 +30,15 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
     "@types/node": "^22.12.0",
     "@types/pg": "^8.11.11",
     "@types/turndown": "^5.0.6",
+    "eslint": "^10.0.2",
     "pino-pretty": "^13.1.3",
     "tsx": "^4.19.2",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.56.1",
     "vitest": "^3.0.5"
   }
 }
