--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,8 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "lint": "eslint src/"
   },
   "dependencies": {
     "@vueuse/core": "^14.2.1",
@@ -23,14 +24,18 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
     "@tailwindcss/vite": "^4.1.4",
     "@types/markdown-it": "^14.1.2",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/test-utils": "^2.4.6",
+    "eslint": "^10.0.2",
+    "eslint-plugin-vue": "^10.8.0",
     "happy-dom": "^20.7.0",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.3",
+    "typescript-eslint": "^8.56.1",
     "vite": "^6.3.5",
     "vitest": "^4.0.18",
     "vue-tsc": "^2.2.8"
